@@ -7,6 +7,7 @@ requiresAuth    = false
 logonAdminGoto  = default^module
 logonUserGoto   = user^account
 recordLogin     = true
+;observers       = DoFudLogin
 
 [OrgMgr]
 enabled         = false
